--- a/MyLayout/zh-Hans.lproj/FOLTest1ViewController.xib
+++ b/MyLayout/zh-Hans.lproj/FOLTest1ViewController.xib
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="10116" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none">
     <dependencies>
-        <deployment identifier="iOS"/>
         <development version="7000" identifier="xcode"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
@@ -35,7 +34,7 @@
                                 <userDefinedRuntimeAttribute type="number" keyPath="weight">
                                     <real key="value" value="0.5"/>
                                 </userDefinedRuntimeAttribute>
-                                <userDefinedRuntimeAttribute type="number" keyPath="myBottomMargin">
+                                <userDefinedRuntimeAttribute type="number" keyPath="myBottom">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
@@ -46,7 +45,7 @@
                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                             <state key="normal" title="添加视图"/>
                             <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="myLeftMargin">
+                                <userDefinedRuntimeAttribute type="number" keyPath="myLeft">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
@@ -60,7 +59,7 @@
                             <fontDescription key="fontDescription" type="system" weight="light" pointSize="15"/>
                             <state key="normal" title="方向"/>
                             <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="myLeftMargin">
+                                <userDefinedRuntimeAttribute type="number" keyPath="myLeft">
                                     <real key="value" value="10"/>
                                 </userDefinedRuntimeAttribute>
                             </userDefinedRuntimeAttributes>
@@ -135,7 +134,7 @@
                         <userDefinedRuntimeAttribute type="number" keyPath="bottomPadding">
                             <integer key="value" value="10"/>
                         </userDefinedRuntimeAttribute>
-                        <userDefinedRuntimeAttribute type="number" keyPath="subviewVertMargin">
+                        <userDefinedRuntimeAttribute type="number" keyPath="subviewVSpace">
                             <integer key="value" value="5"/>
                         </userDefinedRuntimeAttribute>
                     </userDefinedRuntimeAttributes>
