BUG修复，功能升级。

--- a/MyLayoutDemo/zh-Hans.lproj/FLLTest2ViewController.xib
+++ b/MyLayoutDemo/zh-Hans.lproj/FLLTest2ViewController.xib
@@ -121,7 +121,7 @@
                                         <action selector="handleAutoArrangeChange:" destination="-1" eventType="valueChanged" id="prf-iN-SwO"/>
                                     </connections>
                                 </switch>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总是对齐:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fed-AI-s3K">
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="总是拉伸:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="Fed-AI-s3K">
                                     <rect key="frame" x="135" y="7" width="50" height="21"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="10"/>
